modify media query sizing issues related to content not fitting properly on the recipe page template

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -159,7 +159,8 @@ color: #deb;
     }
 
     #recipe-selection div{
-    padding-top: 10px;
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
 
 /* Spicy Chicken Popcorn Recipe Selection Box */
@@ -183,6 +184,7 @@ color: #deb;
 }
 
 /* Recipe Page Template */
+    /*Recipe Page Hero Area */
 #recipe-hero {
     height: 40vh;
     width: 100%;
@@ -214,18 +216,20 @@ color: #deb;
     font-size: 1rem;
 }
 
+    /* Prep Time Cook Time Difficulty Bar */
 .prep-cook-difficulty {
     width: 100%;
     height: 20px;
     text-align: justify;
-    
     display: flex;
     font-size: 0.6rem;
     background-color: rgb(252, 115, 65);
+    padding-top: 2px;
 }
 
 .prep-cook-difficulty h3 {
     font-family: 'Poiret One', sans-serif;
+    padding-left: 10px;
 }
 
 /* Footer */
@@ -295,6 +299,7 @@ color: #deb;
 }
 
     /* Recipe Page Template */
+        /*Recipe Page Hero Area*/
     .recipe-hero-title {
      position: absolute;
      bottom: 40px;
@@ -308,6 +313,21 @@ color: #deb;
      font-size: 1.2rem;
  }
 
+        /* Prep Time Cook Time Difficulty Bar */
+    .prep-cook-difficulty {
+        width: 100%;
+        height: 25px;
+        text-align: justify;
+        display: flex;
+        font-size: 1rem;
+        background-color: rgb(252, 115, 65);
+    }
+
+    .prep-cook-difficulty h3 {
+        font-family: 'Poiret One', sans-serif;
+        padding-left: 10px;
+    }
+
 /* Large devices (laptops and desktops, 992px and up) */
 @media screen and (min-width: 992px) {
     #menu a:hover {
@@ -315,6 +335,7 @@ color: #deb;
     }
 
     /* Recipe Page Template */
+        /*Recipe Page Hero Area*/
     .recipe-hero-title {
             position: absolute;
             bottom: 40px;
@@ -327,3 +348,17 @@ color: #deb;
             padding-bottom: 10px;
             font-size: 2rem;
     }
+        /* Prep Time Cook Time Difficulty Bar */
+   .prep-cook-difficulty {
+       width: 100%;
+       height: 25px;
+       text-align: justify;
+       display: flex;
+       font-size: 1rem;
+       background-color: rgb(252, 115, 65);
+   }
+
+   .prep-cook-difficulty h3 {
+       font-family: 'Poiret One', sans-serif;
+       padding-left: 10px;
+   }
